--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -93,7 +93,7 @@ input:focus {
   outline: none;
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
   nav #menu {
     display: flex;
