--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -190,6 +190,8 @@ form button {
 .section-heading{
   color: black;
   grid-area: heading;
+  text-transform: uppercase;
+  margin: 3vw;
 }
 
 .students-grid-container{
@@ -200,3 +202,28 @@ form button {
   ;
 }
 
+.grid-item{
+  background-color:pink;
+  border-radius: 37px;
+  height: 40vh;
+  width: 70%;
+  margin:0 8vw 2vh 8vw;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+
+.grid-item a{
+  background-color: white;
+  width: 5vw;
+  height: 2vw;
+  justify-self: start;
+  align-self: end;
+  margin: 0 0 2vh 2vw;
+  border-radius: 50px;
+  border: solid black 1px;
+  text-align: center;
+  line-height: 2.5vh;
+  text-decoration: none;
+  font-weight: bold;
+}
