project details/project form updated

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,7 @@
     font-family: 'Inter', sans-serif;
   }
   
-  /* navbar */
+  /* NAVBAR START ------------------------------------------------------------------------- */
   header {
 
 * {
@@ -102,8 +102,10 @@ input:focus {
   outline: none;
 }
 
+/* NAVBAR END ------------------------------------------------------------------------ */
 
-/* responsive  */
+
+/* responsive navbar  */
 @media (max-width: 480px) {
 
   nav #menu {
@@ -197,4 +199,3 @@ form button {
     "heading heading heading"
   ;
 }
-
