--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -259,6 +259,9 @@ form button {
   margin-top: 4rem;
   padding: 2rem;
   align-items: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
 .footer-socials img {
