--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,15 +21,22 @@ header {
   background-color: black;
 }
 
-header .container {
+header > .container {
   max-width: 1400px;
   margin: 0 auto;
   padding: 10px 20px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-  justify-content: space-between;
   position: sticky;
   top: 0;
+}
+
+
+nav {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
 }
 
 h1 {
@@ -79,6 +86,7 @@ nav ul li a:hover {
 .search-bar-container {
   margin: auto;
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
 }
@@ -89,9 +97,11 @@ nav ul li a:hover {
   border-radius: 10px;
   height: 2.5rem;
   padding: 0 15px;
-  display: flex;
-  align-items: center;
   margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px
 }
 
 input {
@@ -102,8 +112,30 @@ input {
   margin-left: 5px;
 }
 
+.search-input {
+  flex-grow: 1;
+}
+
 input:focus {
   outline: none;
+}
+
+.user-login {
+  text-align: right;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg)
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spin-hover:hover {
+  animation: spin 1s infinite;
 }
 
 /* NAVBAR END ------------------------------------------------------------------------ */
@@ -261,6 +293,6 @@ form button {
   align-items: center;
 }
 
-.footer-socials img {
+.footer-socials > img {
   margin: 0rem 1rem;
 }
