--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -319,3 +319,10 @@ form button {
 .footer-socials > img {
   margin: 0rem 1rem;
 }
+
+.loader-container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
